kube-templates/mysql-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  ports:
  - port: 3306
  selector:
    app: mysql
---
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: mysql
spec:
  selector:
    matchLabels:
      app: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - image: gcr.io/sys-2b0109it/demo/bitnami/mysql:8.0-centos-7
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-pv-claim
          mountPath: /bitnami/mysql/data
      volumes:
      - name: mysql-pv-claim
        persistentVolumeClaim:
          claimName: mysql-pv-claim
