kube-templates/harbor-ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: harbor
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/tls-acme: "true"
spec:
  tls: 
  - secretName: reg-harbor-tls
    hosts:
    - harbor.59s.io
  rules:
  - host: harbor.59s.io
    http:
      paths:
      - backend:
          serviceName: reg-harbor
          servicePort: 80
